--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 absl-py==0.10.0
 alabaster==0.7.12
-anaconda-client==1.7.2
+anaconda-client
 anaconda-project==0.8.3
 argh==0.26.2
 argon2-cffi==20.1.0
