--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 absl-py==0.10.0
 alabaster==0.7.12
 anaconda-client
-anaconda-project==0.8.3
+anaconda-project
 argh==0.26.2
 argon2-cffi==20.1.0
 asn1crypto==1.3.0
