--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
 cloudpickle
-clyent==1.2.2
+clyent
 colorama==0.4.3
 comtypes==1.1.7
 contextlib2==0.6.0.post1
