--- a/requirements.txt
+++ b/requirements.txt
@@ -97,7 +97,7 @@ kiwisolver==1.2.0
 kmodes==0.10.2
 lazy-object-proxy==1.4.3
 libarchive-c==2.9
-llvmlite==0.33.0+1.g022ab0f
+llvmlite
 locket==0.2.0
 lxml
 Markdown==3.2.2
