--- a/requirements.txt
+++ b/requirements.txt
@@ -105,8 +105,8 @@ MarkupSafe==1.1.1
 matplotlib
 mccabe==0.6.1
 mistune==0.8.4
-mkl-fft==1.1.0
-mkl-random==1.1.1
+mkl-fft
+mkl-random
 mkl-service==2.3.0
 mock==4.0.2
 more-itertools==8.4.0
