--- a/requirements.txt
+++ b/requirements.txt
@@ -190,7 +190,7 @@ scipy==1.4.1
 seaborn==0.10.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
-singledispatch==3.4.0.3
+singledispatch
 sip==4.19.13
 six==1.15.0
 snowballstemmer==2.0.0
