--- a/requirements.txt
+++ b/requirements.txt
@@ -191,7 +191,7 @@ seaborn==0.10.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch
-sip==4.19.13
+sip
 six==1.15.0
 snowballstemmer==2.0.0
 sortedcollections==1.2.1
