--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argh==0.26.2
 argon2-cffi==20.1.0
 asn1crypto==1.3.0
 astroid
+apyori
 astropy==4.0.1.post1
 astunparse==1.6.3
 async-generator==1.10
